# ml-math

./: pyproject.toml
Linear Algebra/: C1_W1_Lab_2_solving_linear_systems_2_variables.ipynb  C1_W1_Lab_3_introduction_to_numpy.ipynb  numpy_arr.ipynb
